...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="NF1-cz-Vf0" id="8q0-e1-qfL"/>
                            <outlet property="delegate" destination="NF1-cz-Vf0" id="eaJ-Qf-wIH"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="AddNewPass" id="uUx-AA-PaV">
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="vGC-qR-Xyi">
                            <connections>
                                <action selector="saveNewPass:" destination="NF1-cz-Vf0" id="gfx-nb-S8A"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="qAp-hJ-ERY" id="4wP-Co-j6R"/>
                            <outlet property="delegate" destination="qAp-hJ-ERY" id="z6v-Os-JVW"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="MyPass" id="q7X-sQ-O4M"/>
                </collectionViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="V1f-kO-8Qj" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1934" y="-339"/>
        </scene>
        <!--AddPass-->
        <scene sceneID="V9y-Cq-fpi">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IG4-c7-HqI" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="AddPass" image="addpass" id="cPa-gy-q4n"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FB2-93-Zhj">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="KCo-K7-lZs">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="BusTime" id="pM7-mm-0h5"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="knW-Qo-qNy" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1806" y="1067"/>
        </scene>
        <!--More-->
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="nKt-De-AbY" id="TD7-TH-6DA"/>
                            <outlet property="delegate" destination="nKt-De-AbY" id="Jji-SX-8N2"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="More" id="GxQ-ai-aV1"/>
                    <connections>
                        <outlet property="paymentImage" destination="qvt-gb-khe" id="Zju-kk-abl"/>
                        <outlet property="profileImageView" destination="DTU-1K-qv7" id="IeE-dT-MFi"/>
                        <outlet property="settingImageView" destination="tk3-eT-3oM" id="3sD-df-0WP"/>
                    </connections>
                </tableViewController>
...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="lB6-gb-ssF">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="My Tickets" id="VIX-JF-cGQ">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="8ct-1c-oI4"/>
                    </navigationItem>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Fs4-JO-4la" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1938" y="2509"/>
        </scene>
        <!--Tickets-->
        <scene sceneID="Wef-Wb-uGG">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xYM-CH-cVS" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Tickets" image="ticket" id="Uca-aw-CT5"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fHJ-9q-3kv">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
